--- a/frontend/frontend/src/app/account/forgot-password.component.html
+++ b/frontend/frontend/src/app/account/forgot-password.component.html
@@ -1,3 +1,7 @@
+<head>
+    <title>TheDocs | Forgot Password</title>
+</head>
+
 <h3 class="card-header">Forgot Password</h3>
 <div class="card-body">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
