--- a/frontend/frontend/src/app/account/reset-password.component.html
+++ b/frontend/frontend/src/app/account/reset-password.component.html
@@ -1,3 +1,7 @@
+<head>
+    <title>TheDocs | Reset Password</title>
+</head>
+
 <h3 class="card-header">Reset Password</h3>
 <div class="card-body">
     <div *ngIf="tokenStatus == TokenStatus.Validating">
