--- a/frontend/frontend/src/app/home/home.component.html
+++ b/frontend/frontend/src/app/home/home.component.html
@@ -1,6 +1,18 @@
+<head>
+    <title>TheDocs | Homepage</title>
+</head>
+
 <div class="p-4">
     <div class="container">
         <h1>Hi {{account.firstName}}!</h1>
-        <p>You're logged in with Angular 10 & JWT!!</p>
+        <p>You're now logged in!! <br>
+            Congratulations now you may accomplish the following: <br>
+            1. Log In <br>
+            2. Sign Up <br>
+            3. Access your profile <br>
+            4. Edit your profile <br>
+            5. Access Admin things <br>
+            6. Log Out
+        </p>
     </div>
 </div>
