--- a/frontend/frontend/src/app/account/login.component.html
+++ b/frontend/frontend/src/app/account/login.component.html
@@ -1,3 +1,7 @@
+<head>
+    <title>TheDocs | Log In</title>
+</head>
+
 <h3 class="card-header">Login</h3>
 <div class="card-body">
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
