--- a/frontend/frontend/src/app/admin/accounts/list.component.html
+++ b/frontend/frontend/src/app/admin/accounts/list.component.html
@@ -1,3 +1,7 @@
+<head>
+    <title>TheDocs | Admin View Accounts</title>
+</head>
+
 <h1>Accounts</h1>
 <p>All accounts from secure (admin only) api end point:</p>
 <a routerLink="add" class="btn btn-sm btn-success mb-2">Create Account</a>
