--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -1,12 +1,16 @@
 <div class="app-container" [ngClass]="{ 'bg-light': account }">
   <!-- main nav -->
   <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="account">
-      <div class="navbar-nav">
+    <div class="navbar-nav L">
           <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="nav-item nav-link">Home</a>
+    </div>
+    <div class="navbar-nav">
           <a routerLink="/profile" routerLinkActive="active" class="nav-item nav-link">Profile</a>
           <a *ngIf="account.role === Role.Admin" routerLink="/admin" routerLinkActive="active" class="nav-item nav-link">Admin</a>
+    </div>
+    <div class="navbar-nav R">
           <a (click)="logout()" class="nav-item nav-link">Logout</a>
-      </div>
+    </div>
   </nav>
 
   <!-- subnav router outlet -->
