--- a/frontend/frontend/src/app/profile/update.component.html
+++ b/frontend/frontend/src/app/profile/update.component.html
@@ -1,3 +1,7 @@
+<head>
+    <title>TheDocs | Edit Profile</title>
+</head>
+
 <h1>Update Profile</h1>
 <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-row">
