--- a/frontend/frontend/src/app/account/layout.component.html
+++ b/frontend/frontend/src/app/account/layout.component.html
@@ -1,4 +1,11 @@
-<div></div>
+<div class= "container">
+    <div class="row">
+        <div class="col-sm-5 offset-sm-3 mt-5">
+            <h1>TheDocs</h1>
+            <h3>You struggling? We got you!</h3>
+        </div>
+    </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="col-sm-8 offset-sm-2 mt-5">
