updated profile layout

--- a/frontend/frontend/src/app/profile/layout.component.html
+++ b/frontend/frontend/src/app/profile/layout.component.html
@@ -1,8 +1,25 @@
-<div>
-
+<div class="flex">
+<div class="p-4 schedule">
+    <p>
+        This is where the schedule will go
+    </p>
 </div>
-<div class="p-4">
+<div class="p-3">
     <div class="container">
         <router-outlet></router-outlet>
     </div>
 </div>
+</div>
+<div class="flex">
+<main class="p-4">
+    <h1>This is where all user posts will go</h1>
+</main>
+
+<aside class="p-4">
+    <h1>This is where the tags will go</h1>
+</aside>
+</div>
+
+<footer class="p-4">
+    <h1>This is where the copyright stuff and other things go</h1>
+</footer>
