--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -9,11 +9,10 @@
                   <a *ngIf="account.role === Role.Admin" routerLink="/admin" routerLinkActive="active"
                         class="nav-item nav-link">Admin</a>
                   <a routerLink="/classes" routerLinkActive="active" class="nav-item nav-link">Classes</a>
-                  <a routerLink="/questions" routerLinkActive="active" class="nav-item nav-link">Questions</a>
                   <a routerLink="/studygroups" routerLinkActive="active" class="nav-item nav-link">Study Groups</a>
                   <a routerLink="/teacherreview" routerLinkActive="active" class="nav-item nav-link">Teacher Reviews</a>
                   <a routerLink="/thots" routerLinkActive="active" class="nav-item nav-link">Thoughts</a>
-
+                  <a routerLink="/questions" routerLinkActive="active" class="nav-item nav-link">Deep Dive</a>
             </div>
             <div class="navbar-nav R">
                   <button mat-icon-button [matMenuTriggerFor]="beforeMenu">
