--- a/frontend/frontend/src/styles.css
+++ b/frontend/frontend/src/styles.css
@@ -21,3 +21,7 @@ html, body, app, .app-container {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mat-menu-item:focus {
+    outline: 0px solid transparent;
+}
