--- a/frontend/frontend/src/app/profile/layout.component.html
+++ b/frontend/frontend/src/app/profile/layout.component.html
@@ -1,14 +1,14 @@
 <div class="flex">
-<div class="p-4 schedule">
+<mat-card class="schedule">
     <p>
         This is where the schedule will go
     </p>
-</div>
-<div class="p-3">
+</mat-card>
+<mat-card class="profile">
     <div class="container">
         <router-outlet></router-outlet>
     </div>
-</div>
+</mat-card>
 </div>
 <div class="flex">
 <main class="p-4">
