update on stuff

--- a/frontend/frontend/src/app/home/home.component.html
+++ b/frontend/frontend/src/app/home/home.component.html
@@ -2,10 +2,11 @@
     <title>TheDocs | Homepage</title>
 </head>
 
-<div class="p-4">
+<header>
     <div class="container">
         <h1>Hi {{account.firstName}}!</h1>
-        <p>You're now logged in!! <br>
+        <p>Are you just as lost as everyone else? <br>
+            Welcome home! <br>
             Congratulations now you may accomplish the following: <br>
             1. Log In <br>
             2. Sign Up <br>
@@ -15,8 +16,12 @@
             6. Log Out
         </p>
     </div>
-</div>
+</header>
 
-<div class="p-4">
+<main>
     <app-show-post></app-show-post>
-</div>
+</main>
+
+<footer>
+    <p>There should be a copyright right here!</p>
+</footer>
