--- a/frontend/frontend/src/app/classes/layout.component.html
+++ b/frontend/frontend/src/app/classes/layout.component.html
@@ -1,1 +1,19 @@
-<p>Classes page exists!</p>
+<header>
+    <p>This are the classes that can be categorized</p>
+</header>
+<div class="wrapper">
+<main>
+    <mat-card class="search">
+        <p>Search goes in here</p>
+    </mat-card>
+
+</main>
+<aside>
+    <mat-card class="tags">
+        <p>Tags go in here</p>
+    </mat-card>
+</aside>
+</div>
+<footer>
+    <p>This is where the copyright goes</p>
+</footer>
