--- a/frontend/frontend/src/app/profile/layout.component.html
+++ b/frontend/frontend/src/app/profile/layout.component.html
@@ -11,15 +11,15 @@
 </mat-card>
 </div>
 <div class="flex">
-<main class="p-4">
+<main class="posts">
     <h1>This is where all user posts will go</h1>
 </main>
 
-<aside class="p-4">
+<aside class="tags">
     <h1>This is where the tags will go</h1>
 </aside>
 </div>
 
-<footer class="p-4">
+<footer class="info">
     <h1>This is where the copyright stuff and other things go</h1>
 </footer>
