--- a/frontend/frontend/src/app/questions/layout.component.html
+++ b/frontend/frontend/src/app/questions/layout.component.html
@@ -1,1 +1,30 @@
-<p>Questions page exists!</p>
+<header>
+    <p>These are the questions that can be answered</p>
+</header>
+<div class="wrapper">
+<main>
+    <mat-card class="searchbar">
+        <p>searchbar with badge goes here</p>
+    </mat-card>
+
+    <mat-card class="search">
+        <p>Search goes in here</p>
+    </mat-card>
+
+</main>
+<aside>
+    <mat-card class="askqbutton">
+        <p>ask questions button</p>
+    </mat-card>
+    <span> Top questions goes here </span>
+</aside>
+</div>
+<div class="question">
+    <mat-card class="question">
+        <p>change this into a popup message
+            <br>form for asking a question goes here</p>
+    </mat-card>
+</div>
+<footer>
+    <p>This is where the copyright goes</p>
+</footer>
