--- a/frontend/frontend/src/app/studygroups/layout.component.html
+++ b/frontend/frontend/src/app/studygroups/layout.component.html
@@ -1,1 +1,24 @@
-<p>Study Groups Page was made!</p>
+<header>
+    <p>This is where we can create study groups to talk to each other</p>
+</header>
+<div class="mid">
+<main>
+    <mat-card class="searchbar">
+        <p>searchbar with badge goes here</p>
+    </mat-card>
+    <mat-card class="public">
+        <p>public study rooms</p>
+    </mat-card>
+    <mat-card class="private">
+        <p>private study rooms</p>
+    </mat-card>
+</main>
+<aside>
+    <mat-card class="create">
+        <p>create a study room</p>
+    </mat-card>
+</aside>
+</div>
+<footer>
+    <p>This is where the copyright goes</p>
+</footer>
