--- a/frontend/frontend/src/app/teacherreview/layout.component.html
+++ b/frontend/frontend/src/app/teacherreview/layout.component.html
@@ -1,1 +1,21 @@
-<p>Teacher Review page was made!</p>
+<header>
+    <p>This is where we judge teachers and see all their flaws</p>
+</header>
+<div class="wrapper">
+<main>
+    <mat-card class="searchbar">
+        <p>searchbar with badge goes here</p>
+    </mat-card>
+    <mat-card class="teachers">
+        <p>list of teachers</p>
+    </mat-card>
+</main>
+<aside>
+    <mat-card class="sort">
+        <p>sort by tags</p>
+    </mat-card>
+</aside>
+</div>
+<footer>
+    <p>This is where the copyright goes</p>
+</footer>
