--- a/frontend/frontend/src/app/thots/layout.component.html
+++ b/frontend/frontend/src/app/thots/layout.component.html
@@ -1,1 +1,29 @@
-<p>Thoughts page exists!</p>
+<header>
+    <p>These are the random thoughts that people have...</p>
+</header>
+<div class="wrapper">
+<main>
+    <mat-card class="searchbar">
+        <p>searchbar goes here</p>
+    </mat-card>
+
+    <mat-card class="posts">
+        <p>Posts goes in here</p>
+    </mat-card>
+
+</main>
+<aside>
+    <mat-card class="create">
+        <p>create posts button</p>
+    </mat-card>
+    <mat-card class="random">
+        <p>open a random post</p>
+    </mat-card>
+    <mat-card class="top5">
+        <p>top posts for the week</p>
+    </mat-card>
+</aside>
+</div>
+<footer>
+    <p>This is where the copyright goes</p>
+</footer>
