show post add post frontend update

--- a/frontend/frontend/src/app/show-post/show-post.component.html
+++ b/frontend/frontend/src/app/show-post/show-post.component.html
@@ -22,5 +22,9 @@
       </div>
       <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
       <small class="text-muted">Donec id elit non mi porta.</small>
+      <div>
+        <i title="Edit" class="fas fa-edit" aria-hidden="true"></i>
+        <i title="Delete" class="fas fa-trash-alt" aria-hidden="true"></i>
+    </div>
     </a>
   </div>
