class lists and teacher lists

--- a/frontend/frontend/src/app/questions/layout.component.html
+++ b/frontend/frontend/src/app/questions/layout.component.html
@@ -14,7 +14,7 @@
 </main>
 <aside>
     <mat-card class="askqbutton">
-        <p>ask questions button</p>
+        <button>Ask A Question!</button>
     </mat-card>
     <span> Top questions goes here </span>
 </aside>
