--- a/frontend/frontend/src/app/classes/layout.component.html
+++ b/frontend/frontend/src/app/classes/layout.component.html
@@ -4,7 +4,10 @@
 <div class="wrapper">
 <main>
     <mat-card class="search">
-        <p>Search goes in here</p>
+        <a routerLink="/courses" routerLinkActive="active">courses</a>
+        <div [@routeAnimation]="getAnimationData(routerOutlet)">
+            <router-outlet #routerOutlet="outlet"></router-outlet>
+        </div>
     </mat-card>
 
 </main>
