updated class list and teacher list

--- a/frontend/frontend/src/app/app.component.html
+++ b/frontend/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
             <div class="navbar-nav">
                   <a *ngIf="account.role === Role.Admin" routerLink="/admin" routerLinkActive="active"
                         class="nav-item nav-link">Admin</a>
-                  <a routerLink="/courses" routerLinkActive="active" class="nav-item nav-link">Classes</a>
+                  <a routerLink="/classes" routerLinkActive="active" class="nav-item nav-link">Classes</a>
                   <a routerLink="/studygroups" routerLinkActive="active" class="nav-item nav-link">Study Groups</a>
                   <a routerLink="/teacherreview" routerLinkActive="active" class="nav-item nav-link">Teacher Reviews</a>
                   <a routerLink="/thots" routerLinkActive="active" class="nav-item nav-link">Thoughts</a>
