--- a/frontend/frontend/src/app/questions/layout.component.html
+++ b/frontend/frontend/src/app/questions/layout.component.html
@@ -13,9 +13,7 @@
 
 </main>
 <aside>
-    <button mat-raised-button (click)="openDialog()" class="askquestion">
-        <p>Ask A Question</p>
-    </button>
+    <button mat-raised-button (click)="openDialog()" class="askquestion">Ask A Question</button>
     <mat-card class="topquestions">
         <p>Top questions goes here</p>
     </mat-card>
