updated classes, study groups, and teachers

--- a/frontend/frontend/src/app/classes/layout.component.html
+++ b/frontend/frontend/src/app/classes/layout.component.html
@@ -3,9 +3,9 @@
 </header>
 <div class="wrapper">
 <main>
-    
+
     <mat-card class="search">
-        <app-view-classes></app-view-classes>
+        <app-view-courses></app-view-courses>
     </mat-card>
 </main>
 <aside>
