--- a/frontend/frontend/src/app/questions/question-form/question-form.component.html
+++ b/frontend/frontend/src/app/questions/question-form/question-form.component.html
@@ -1,22 +1,18 @@
-<!--
 <h1>Question Form</h1>
 
-<form (ngSubmit)="onSubmit()" #heroForm="ngForm">
 <div class="form-group">
     <label for="question">Question</label>
     <input type="text" class="form-control" id="question"
             required
-            [(ngModel)]="questions.question" name="question">
+            [(ngModel)]="model.question" name="question">
 </div>
 
 <div class="form-group">
     <label for="course">Course Number</label>
-    <select class="form-control" id="course" 
+    <select class="form-control"  id="course"
             required
-            [(ngModel)]="courses.id" name ="id">
-      <option *ngFor="let id of courses" [value]="id">{{id}}</option>
+            [(ngModel)]="model.course" name="course">
+      <option *ngFor="let num of courses" [value]="num">CPSC {{num}}</option>
     </select>
 </div>
 
-<button type="submit" class="btn btn-success" (click)="addNewQuestion(newQuestion.course,newQuestion.questions)">Submit Question</button>
-</form> -->
