--- a/frontend/frontend/src/app/studygroups/layout.component.html
+++ b/frontend/frontend/src/app/studygroups/layout.component.html
@@ -7,7 +7,7 @@
         <p>searchbar with badge goes here</p>
     </mat-card>
     <mat-card class="public">
-        <p>public study rooms</p>
+        <router-outlet></router-outlet>
     </mat-card>
     <mat-card class="private">
         <p>private study rooms</p>
