--- a/frontend/frontend/src/app/studygroups/layout.component.html
+++ b/frontend/frontend/src/app/studygroups/layout.component.html
@@ -20,5 +20,10 @@
 </aside>
 </div>
 <footer>
-    <p>This is where the copyright goes</p>
+    <div>
+        <h1>We can help you</h1>  
+    </div>
+    <div class="logo">
+    <h2>TheDocs</h2>
+    </div>
 </footer>
