--- a/frontend/frontend/src/app/teacherreview/layout.component.html
+++ b/frontend/frontend/src/app/teacherreview/layout.component.html
@@ -7,7 +7,7 @@
         <p>searchbar with badge goes here</p>
     </mat-card>
     <mat-card class="teachers">
-        <app-view-teachers></app-view-teachers>
+        <app-view-teacher></app-view-teacher>
     </mat-card>
 </main>
 <aside>
