--- a/frontend/frontend/src/app/classes/layout.component.css
+++ b/frontend/frontend/src/app/classes/layout.component.css
@@ -32,3 +32,13 @@ aside {
     width: 90%;
     min-height: 500px;
 }
+.dynamic {
+    max-width: 90%;
+}
+
+footer {
+    background-color: #343a40;
+    color: white;
+    margin-top: 25px;
+    padding: 6em 2em;
+}
