--- a/frontend/frontend/src/app/studygroups/layout.component.css
+++ b/frontend/frontend/src/app/studygroups/layout.component.css
@@ -1,4 +1,4 @@
-header, footer {
+header {
     display: flex;
     justify-content: center;
     padding: 2em;
@@ -33,4 +33,22 @@ aside {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+footer {
+    display:flex;
+    flex-direction: column;
+    align-items:flex-start;
+    background-color: #343a40;
+    color: white;
+    margin-top: 25px;
+    height: 15em;
+    padding: 2em 4em;
+}
+.logo h1 {
+    margin-top:10px;
+    margin-bottom: -5px;
+}
+.logo p {
+    font-size: 0.9em;
+    margin-left: 10px;
 }
