--- a/frontend/frontend/src/app/thots/layout.component.css
+++ b/frontend/frontend/src/app/thots/layout.component.css
@@ -29,7 +29,7 @@ aside {
 }
 .posts {
     width: 90%;
-    min-height: 500px;
+    min-height: 600px;
 }
 .create {
     width: 80%;
@@ -39,4 +39,11 @@ aside {
 }
 .top5 {
     width: 80%;
+}
+
+footer {
+    background-color: #343a40;
+    color: white;
+    margin-top: 25px;
+    padding: 6em 2em;
 }
