--- a/frontend/frontend/src/app/studygroups/layout.component.css
+++ b/frontend/frontend/src/app/studygroups/layout.component.css
@@ -36,8 +36,8 @@ aside {
 }
 footer {
     display:flex;
-    flex-direction: column;
-    align-items:flex-start;
+    flex-direction: row;
+    align-items:center;
     background-color: #343a40;
     color: white;
     margin-top: 25px;
