--- a/frontend/frontend/src/app/studygroups/layout.component.html
+++ b/frontend/frontend/src/app/studygroups/layout.component.html
@@ -7,7 +7,9 @@
         <p>searchbar with badge goes here</p>
     </mat-card>
     <mat-card class="public">
-        <router-outlet></router-outlet>
+        <div class="chatRoom">
+            <router-outlet></router-outlet>
+        </div>
     </mat-card>
     <mat-card class="private">
         <p>private study rooms</p>
@@ -23,6 +25,7 @@
     <br>
     <br>
     <div class="logo">
-    <h2>TheDocs</h2>
+    <h1>TheDocs</h1>
+    <h3></h3>
     </div>
 </footer>
