--- a/frontend/frontend/src/app/classes/layout.component.html
+++ b/frontend/frontend/src/app/classes/layout.component.html
@@ -1,5 +1,8 @@
 <header>
-    <p>This are the classes that can be categorized</p>
+    <h1>Here is a list of Computer Science classes</h1>
+    <h4>This list contains the following information about <br>
+        computer science courses that you are able to take <br>
+        at California State Fullerton.</h4>
 </header>
 <div class="wrapper">
 <main>
@@ -7,11 +10,11 @@
         <app-view-courses></app-view-courses>
     </mat-card>
 </main>
-<aside>
+<!-- <aside>
     <mat-card class="tags">
         <p>Tags go in here</p>
     </mat-card>
-</aside>
+</aside> -->
 </div>
 <footer>
     <p>This is where the copyright goes</p>
