--- a/frontend/frontend/src/app/studygroups/chat-form/chat-form.component.css
+++ b/frontend/frontend/src/app/studygroups/chat-form/chat-form.component.css
@@ -7,8 +7,9 @@
     transition: 0.1s ease-out;
     padding-left: 80px;
 }
+
 .chatInput:focus{
-    background-color: #E4F1fe;
+    background-color: #E4F1FE;
     color: #222;
     transition: 0.2s ease-in;
 }
@@ -17,9 +18,10 @@
     flex: 1;
     padding: 10px;
     padding: 8px 24px;
+    font-size: 1.3em;
     font-family: 'Droid Sans', sans-serif;
-    background-color: #2a2845;
-    color:white;
+    background-color: #2A2845;
+    color: white;
     transition: 0.2s ease-out;
     min-width: 50px;
 }
