--- a/frontend/frontend/src/app/studygroups/chatroom/chatroom.component.css
+++ b/frontend/frontend/src/app/studygroups/chatroom/chatroom.component.css
@@ -1,23 +1,30 @@
+.mainContent{
+    display: flex;
+}
+
 .userListWrapper {
+    background-color: #2A2845;
+    color: #fff;
     display: flex;
     font-family: "Open Sans", sans-serif;
     font-size: 1.2em;
     flex: 1;
-    color: white;
     order: 1;
-    background-color: #2A2845;
-    padding: 20px 0px 40px 30px;
-    border-right: 1px solid#222;
+    padding:20px 0px 40px 30px;
+    border-right: 1px solid #222;
 }
 
 .feedWrapper {
+    background-color: #fff;
+    background: 
+        linear-gradient(181deg, rgba(100,200,255,0.6), rgba(0, 0, 0, 0.9)),
+        url('../../assets/img/chat-bg-1.png') center center no-repeat;;
     font-family: "Open Sans", sans-serif;
     font-size: 1.2em;
     flex: 5;
     order: 2;
     overflow-y: scroll;
-    padding: 20px 0 0 24px;
-    background-color: white;
+    padding:20px 0px 0px 24px;
 }
 
 .chatFormWrapper {
@@ -27,7 +34,12 @@
     z-index: 3;
 }
 
-#scroll-style::-webkit-scrollbar-track {
-    border-radius: 10px;
-    background-color: #f5f5f5;
+#scroll-style::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+app-user-list {
+    width: 100%;
 }
