--- a/frontend/frontend/src/app/studygroups/layout.component.css
+++ b/frontend/frontend/src/app/studygroups/layout.component.css
@@ -52,3 +52,20 @@ footer {
     font-size: 0.9em;
     margin-left: 10px;
 }
+
+.chatHeaderWrapper {
+    height: 90px;
+    color: #222;
+    box-shadow: 0 2px 3px rgba(0,0,0,0.37), 1px 2px 3px rgba(0,0,0,0.54);
+    z-index: 2;
+}
+
+.chatRoom {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+router-outlet {
+    height:0;
+}
