--- a/frontend/frontend/src/app/studygroups/user-item/user-item.component.html
+++ b/frontend/frontend/src/app/studygroups/user-item/user-item.component.html
@@ -1,1 +1,7 @@
-<p>user-item works!</p>
+<div class="userItem">
+    <span class="status" [ngClass]=(account.status)>
+    </span>
+    <span class="userName">
+      {{user.displayName}}
+    </span>
+  </div>
