--- a/frontend/frontend/src/styles.css
+++ b/frontend/frontend/src/styles.css
@@ -17,7 +17,7 @@ a { cursor: pointer; }
 html, body, app, .app-container {
     min-height: 100%;
     max-height: auto;
-    background-image: url("\src\pexels-nathan-cowley-1151282.jpg");
+    background-image: url("\pexels-nathan-cowley-1151282.jpg");
     background-size: cover;
 }
 
