enough for today

--- a/frontend/frontend/src/app/home/home.component.html
+++ b/frontend/frontend/src/app/home/home.component.html
@@ -16,5 +16,10 @@
 </main>
 
 <footer>
-    
+    <br>
+    <br>
+    <div class="logo">
+    <h1>TheDocs</h1>
+    <h3></h3>
+    </div>
 </footer>
