--- a/frontend/frontend/src/app/teacherreview/layout.component.html
+++ b/frontend/frontend/src/app/teacherreview/layout.component.html
@@ -1,21 +1,26 @@
 <header>
-    <p>This is where we judge teachers and see all their flaws</p>
+    <h1>Here is a list of Computer Science Teachers</h1>
+    <h4>This list contains the following information about <br>
+        computer science teachers that currently teach at  <br>
+        California State University Fullerton.</h4>
 </header>
 <div class="wrapper">
 <main>
-    <mat-card class="searchbar">
-        <p>searchbar with badge goes here</p>
-    </mat-card>
     <mat-card class="teachers">
         <app-view-teacher></app-view-teacher>
     </mat-card>
 </main>
-<aside>
+<!-- <aside>
     <mat-card class="sort">
         <p>sort by tags</p>
     </mat-card>
-</aside>
+</aside> -->
 </div>
 <footer>
-    <p>This is where the copyright goes</p>
+    <br>
+    <br>
+    <div class="logo">
+    <h1>TheDocs</h1>
+    <h3></h3>
+    </div>
 </footer>
