--- a/frontend/frontend/src/app/classes/layout.component.html
+++ b/frontend/frontend/src/app/classes/layout.component.html
@@ -17,5 +17,10 @@
 </aside> -->
 </div>
 <footer>
-    <p>This is where the copyright goes</p>
+    <br>
+    <br>
+    <div class="logo">
+    <h1>TheDocs</h1>
+    <h3></h3>
+    </div>
 </footer>
