--- a/frontend/frontend/src/app/teacherreview/view-teacher/view-teacher.component.html
+++ b/frontend/frontend/src/app/teacherreview/view-teacher/view-teacher.component.html
@@ -1,3 +1,5 @@
+<input name="searchInput" type="text" placeholder="Search for teachers" size="50" class="dynamic">
+
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" >
   <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding class="description">
     {{node.name}}
