--- a/frontend/frontend/src/app/thots/layout.component.html
+++ b/frontend/frontend/src/app/thots/layout.component.html
@@ -25,5 +25,10 @@
 </aside>
 </div>
 <footer>
-    <p>This is where the copyright goes</p>
+    <br>
+    <br>
+    <div class="logo">
+    <h1>TheDocs</h1>
+    <h3></h3>
+    </div>
 </footer>
