--- a/frontend/frontend/src/app/classes/layout.component.css
+++ b/frontend/frontend/src/app/classes/layout.component.css
@@ -19,7 +19,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
+    align-items: stretch;
     width: 60%;
     min-width: 500px;
 }
@@ -33,16 +33,33 @@ aside {
     max-width: 500px;
 }
 .search {
-    width: 90%;
-    min-height: 500px;
+    max-width: 95%;
+    margin-bottom: 10px;
+    height: 3em;
+    border-radius: 5px;
 }
-.dynamic {
-    max-width: 90%;
+.response {
+    width: 100%;
+    display: flex;
+    background-color: lightblue;
+    margin: 4px 0px;
+    border-radius: 10px;
 }
+.list {
+    padding: 10px;
+    color: black;
+    width: 100%;
+    min-height: 10px;
+    font-size: 18px;
 
+}
 footer {
     background-color: #343a40;
     color: white;
     margin-top: 25px;
     padding: 6em 2em;
+}
+a:hover { 
+    text-decoration: none;
+    font-size: 20px;
 }
