--- a/frontend/frontend/src/app/profile/layout.component.html
+++ b/frontend/frontend/src/app/profile/layout.component.html
@@ -1,8 +1,8 @@
 <div class="flex">
 <mat-card class="schedule">
-    <p>
-        This is where the schedule will go
-    </p>
+    <div class="board">
+        
+    </div>
 </mat-card>
 <mat-card class="profile">
     <div class="container">
